objects/X10CustomObject__c.object
<CustomObject>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>name2__c</fullName>
        <label>name2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <label>10CustomObject</label>
    <nameField>
        <label>10CustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>10CustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>